[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/GameOverPopup.gd" type="Script" id=1]
[ext_resource path="res://Assets/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="GameOverPopup" type="Node2D"]
position = Vector2( 584, 390 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Tween" type="Tween" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = -80.0
margin_top = -48.0
margin_right = 80.0
margin_bottom = -32.0
custom_fonts/font = SubResource( 1 )
text = "Game Over!"
align = 1
valign = 1

[node name="Retry" type="Button" parent="."]
margin_left = -80.0
margin_top = -16.0
margin_right = -32.0
margin_bottom = 4.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Retry"
flat = true

[node name="Menu" type="Button" parent="."]
margin_left = 32.0
margin_top = -16.0
margin_right = 80.0
margin_bottom = 4.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Menu"
flat = true

[node name="Quit" type="Button" parent="."]
margin_left = -24.0
margin_top = 16.0
margin_right = 24.0
margin_bottom = 36.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Quit"
flat = true
[connection signal="pressed" from="Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
